# cio-tableland-effector

./: .gitignore  README.md  build.sh  validate.sh
.github/workflows/: release.yml  tests.yml
effector/: Cargo.toml  module.yaml
effector/src/: curl.rs  main.rs  query.rs  types.rs  utils.rs
imports/: Cargo.toml
imports/src/: lib.rs  types.rs
module/: cio_tableland_effector.wasm  module.yaml
