[package]
name = "cio_tableland_effector"
version = "0.1.1"
edition = "2018"
publish = false

[dependencies]
eyre = { workspace = true }
log = "0.4.20"
marine-rs-sdk = { workspace = true }
curl-effector-types = { workspace = true }
url = "2.5.0"
curl-effector-imports = "0.1.1"
cio-response-types = { git = "https://github.com/composibleIO/cio-response-types", branch = "main" }
serde = "1.0.198"
serde_json = "1.0.116"
rmp-serde = "1.1.2"
chrono = "0.4"

[dev-dependencies]
marine-rs-sdk-test = { workspace = true }
env_logger = "0.10.0"
test-env-helpers = "0.2.2"
mockito = "1.1.0"
